--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,18 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - AD02",
+            "request": "launch",
+            "mainClass": "app.AD02.AD02"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - App",
+            "request": "launch",
+            "mainClass": "app.App"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - lee_json",
             "request": "launch",
             "mainClass": "app.AD02.archivos.lee_json",
