--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - ReadXML",
+            "request": "launch",
+            "mainClass": "app.AD02.XML.ReadXML",
+            "projectName": "1"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - HelpFunctions",
             "request": "launch",
             "mainClass": "app.AD02.HelpFunctions",
